--- a/pyk/pyproject.toml
+++ b/pyk/pyproject.toml
@@ -23,6 +23,7 @@ cookiecutter = "^2.6.0"
 filelock = "^3.9.0"
 graphviz = "^0.20.1"
 hypothesis = "^6.103.1"
+networkx = "^3.4.2"
 psutil = "^5.9.5"
 pybind11 = "^2.10.3"
 pytest = "*"
@@ -96,4 +97,8 @@ ignore_missing_imports = true
 
 [[tool.mypy.overrides]]
 module = "cookiecutter.*"
+ignore_missing_imports = true
+
+[[tool.mypy.overrides]]
+module = "networkx"
 ignore_missing_imports = true
