--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -210,6 +210,7 @@ jobs:
 
   macos-build:
     name: 'Build MacOS Package'
+    continue-on-error: true
     runs-on: macos-14
     timeout-minutes: 120
     environment: production
