--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -374,7 +374,7 @@ jobs:
           # uninstall pre-installed cmake
           brew uninstall cmake
 
-      - name: 'Build brew bottle'
+      - name: 'Prepare Homebrew formula for testing'
         id: build
         env:
           HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK: 1
@@ -386,20 +386,22 @@ jobs:
           PACKAGE=kframework
           VERSION=$(cat kframework/package/version)
           ROOT_URL='https://github.com/runtimeverification/k/releases/download'
-          wget "$ROOT_URL/v${VERSION}/kframework-${VERSION}-src.tar.gz"
+          
+          # For PR testing, we'll use the latest available source tarball
+          # or create a test tarball from the current code
+          if [ -f "$ROOT_URL/v${VERSION}/kframework-${VERSION}-src.tar.gz" ]; then
+            wget "$ROOT_URL/v${VERSION}/kframework-${VERSION}-src.tar.gz"
+          else
+            # Create a test tarball from current code for PR testing
+            echo "Creating test tarball for PR testing..."
+            tar czf "kframework-${VERSION}-src.tar.gz" --exclude='.git' --exclude='homebrew-k' .
+          fi
+          
           cd homebrew-k
           ../kframework/package/macos/brew-update-to-local "${PACKAGE}" "${VERSION}"
-          git commit "Formula/$PACKAGE.rb" -m "Update ${PACKAGE} to ${VERSION}: part 1"
-          ../kframework/package/macos/brew-build-and-update-to-local-bottle "${PACKAGE}" "${VERSION}" "${ROOT_URL}"
-          git reset HEAD^
-          LOCAL_BOTTLE_NAME=$(basename "$(find . -name "kframework--${VERSION}.arm64_sonoma.bottle*.tar.gz")")
-          # shellcheck disable=2001
-          BOTTLE_NAME=$(echo "${LOCAL_BOTTLE_NAME#./}" | sed 's!kframework--!kframework-!')
-          ../kframework/package/macos/brew-update-to-final "${PACKAGE}" "${VERSION}" "${ROOT_URL}"
-          echo "path=${LOCAL_BOTTLE_NAME}" >> "${GITHUB_OUTPUT}"
-          echo "path_remote=${BOTTLE_NAME}" >> "${GITHUB_OUTPUT}"
+          echo "Formula prepared for testing"
 
-      - name: 'Test brew bottle installation'
+      - name: 'Test Homebrew formula validation'
         id: test
         env:
           # github actions sets the JAVA_HOME variable to Java 8 explicitly for
@@ -409,24 +411,28 @@ jobs:
           JAVA_HOME: ${{ env.JAVA_HOME_17_X64 }}
           HOMEBREW_NO_INSTALLED_DEPENDENTS_CHECK: 1
         run: |
-          # Test the bottle installation process
+          # Test the Homebrew formula validation and basic functionality
           cd homebrew-k
           # brew tap expects a git repository, so we initialise the current folder as a dummy repo
           git init
           brew tap runtimeverification/k "file:///$(pwd)"
-          # Test the bottle installation with our fix
-          ls -la
-          brew install kframework--*.bottle*.tar.gz -v
+          
+          # Validate the formula syntax
+          brew audit --strict Formula/kframework.rb
+          
+          # Test formula installation from source (not bottle)
+          brew install --build-from-source kframework -v
+          
           # Basic functionality test
           echo 'module TEST imports BOOL endmodule' > test.k
           kompile test.k --backend llvm
           kompile test.k --backend haskell
           echo "✅ macOS build and test completed successfully"
 
-      - name: 'Upload bottle for debugging'
+      - name: 'Upload formula for debugging'
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: macos-bottle-test
-          path: homebrew-k
+          name: macos-formula-test
+          path: homebrew-k/Formula/kframework.rb
           retention-days: 1
