Add macOS testing to PR workflow with continue-on-error
- Add macOS Build & Test job to test-pr.yml with continue-on-error: true
- Update release.yml to make macOS build and test jobs non-blocking
- Keep macOS tests in place to monitor failures without blocking PRs/releases
- Clean approach: test the failures without breaking the build pipeline

This allows us to:
- Monitor macOS build issues without blocking development
- Collect data on macOS-specific failures
- Fix issues incrementally without pressure
- Maintain working CI/CD pipeline for other platforms

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -302,6 +302,7 @@ jobs:
     timeout-minutes: 120
     environment: production
     needs: [set-release-id, source-tarball]
+    continue-on-error: true # Do not fail releases due to MacOS builds at this time. Oct. 6, 2025
     steps:
       - name: Check out code
         uses: actions/checkout@v4
@@ -400,7 +401,7 @@ jobs:
     timeout-minutes: 60
     environment: production
     needs: [macos-build, set-release-id]
-    continue-on-error: true
+    continue-on-error: true # Do not fail releases due to MacOS tests at this time. Oct. 6, 2025
     steps:
       - name: 'Check out matching homebrew repo branch'
         uses: actions/checkout@v4
