--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -265,25 +265,25 @@ jobs:
         run: |
           # Detect platform
           PLATFORM=$(nix eval --impure --expr 'builtins.currentSystem' --raw)
-          echo "Testing cachix push on platform: $PLATFORM"
+          echo "Testing cachix push on platform: ${PLATFORM}"
           
           # Build the full K package (including all large dependencies like hs-backend-booster-dev-tools ~748MB)
           # This tests the scenario that was failing with kup due to multipart upload timeouts
           echo "Building full .#k package with all dependencies..."
-          K_PATH=$(nix build .#packages.${PLATFORM}.k --no-link --json | jq -r '.[].outputs.out')
-          DRV_K=$(nix-store --query --deriver ${K_PATH})
-          STORE_PATHS=$(nix-store --query --requisites --include-outputs ${DRV_K})
+          K_PATH=$(nix build ".#packages.${PLATFORM}.k" --no-link --json | jq -r '.[].outputs.out')
+          DRV_K=$(nix-store --query --deriver "${K_PATH}")
+          STORE_PATHS=$(nix-store --query --requisites --include-outputs "${DRV_K}")
           
           # Show some stats about what we're pushing
-          TOTAL_PATHS=$(echo "$STORE_PATHS" | wc -l | tr -d ' ')
-          echo "Total store paths to push: $TOTAL_PATHS"
+          TOTAL_PATHS=$(echo "${STORE_PATHS}" | wc -l | tr -d ' ')
+          echo "Total store paths to push: ${TOTAL_PATHS}"
           echo "Largest paths:"
-          echo "$STORE_PATHS" | xargs -I {} du -sh {} 2>/dev/null | sort -rh | head -5 || true
+          echo "${STORE_PATHS}" | xargs -I {} du -sh {} 2>/dev/null | sort -rh | head -5 || true
           
           # Push to cachix using direct cachix push (no kup, no retries)
           # This tests if direct cachix push handles large files better than kup's multipart upload
-          echo "Pushing all $TOTAL_PATHS store paths to k-framework cache..."
-          echo "$STORE_PATHS" | cachix push k-framework
+          echo "Pushing all ${TOTAL_PATHS} store paths to k-framework cache..."
+          echo "${STORE_PATHS}" | cachix push k-framework
           echo "✅ Cachix push test completed successfully"
 
 
