--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -240,8 +240,8 @@ jobs:
         include:
           # - runner: ubuntu-24.04
           #   os: ubuntu-24.04
-          - runner: macos-14
-            os: macos-14
+          - runner: macos-latest
+            os: macos-15
     runs-on: ${{ matrix.runner }}
     timeout-minutes: 30
     steps:
